# uwrt_software_training

./: .gitignore  CMakeLists.txt  README.md  cmake.md  cpp.md  guide.md  linux.md  package.xml
GUIDE/: composition.md  cpp.md  guide.md  launch_file.md  overlook.md  structure.md
include/software_training/: .p2_circle.hpp.swp  p1_clear.hpp  p2_circle.hpp  p3_spawn.hpp
launch/: software_training_launch.py  turtle_launch.launch.py  turtle_launch.py
src/: p1_clear.cpp  p2_circle.cpp  p3_spawn.cpp
uwrt_mars_rover/: CMakeLists.txt  package.xml
uwrt_mars_rover/include/uwrt_mars_rover/: p1_clear_turtles.hpp  p2_circle_turtle.hpp  p3_spawn_turtles.hpp
uwrt_mars_rover/launch/: launch.py
uwrt_mars_rover/src/: p1_clear_turtles.cpp  p2_circle_turtle.cpp  p3_spawn_turtles.cpp
